--- a/libraries/pgp/sun15.tex
+++ b/libraries/pgp/sun15.tex
@@ -1,279 +1,36 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
 
 
 % Variable part - replace [xxx] as appropriate.
-% \newcommand{\stardocnumber}    {Draft - 15.8}
-\newcommand{\stardocnumber}    {15.8}
-\newcommand{\stardocauthors}   {D L Terrett, M J Bly}
-\newcommand{\stardocdate}      {25 February 1999}
-\newcommand{\stardoctitle}     {PGPLOT --- Graphics Subroutine Library}
-\newcommand{\stardocversion}   {v5.1.1/v5.2.0}
-\newcommand{\stardocmanual}    {User's Guide}
-\newcommand{\stardocabstract}  {PGPLOT is the \emph{de facto} standard plotting
+% \stardocnumber      {Draft - 15.8}
+\stardocnumber      {15.8}
+\stardocauthors     {D L Terrett, M J Bly}
+\stardocdate        {25 February 1999}
+\stardoctitle       {PGPLOT --- Graphics Subroutine Library}
+\stardocversion     {v5.1.1/v5.2.0}
+\stardocmanual      {User's Guide}
+\stardocabstract    {PGPLOT is the \emph{de facto} standard plotting
 library in Astronomy.  Starlink supports both the original `Native' version and the GKS-based `Starlink' version.  This document describes their use on
 Starlink systems.}
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
+% ? Document specific \providecommand or \newenvironment commands.
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 % ? Main text
 
@@ -308,9 +65,8 @@ The main source of information on using PGPLOT is the PGPLOT manual.
 The manual for version 5 is still in preparation but a hypertext version
 can be found at:
 \begin{quote}
-\texttt{\htmladdnormallink{http://astro.caltech.edu/\~{}tjp/pgplot/}{http://astro.caltech.edu/\~{}tjp/pgplot/}}
+\url{http://astro.caltech.edu/\~tjp/pgplot/}
 \end{quote}
-
 This describes the original GRPCKG \emph{Native-PGPLOT} version but the
 majority of the manual applies equally to both versions.
 
@@ -487,72 +243,72 @@ routines and GKS inquiry routines.
 The following simple example is a subroutine that uses PGPLOT to draw an X, Y
 plot in an SGS zone.
 \begin{small}
-\begin{verbatim}
-            SUBROUTINE XYPLOT (IZONE, X, Y, N, XLO, XHI, YLO, YHI, ISTAT)
-      *++
-      *
-      *   XYPLOT   Draw X,Y plot in an SGS zone.
-      *
-      *   Description:
-      *
-      *      Uses PGPLOT to draw an X,Y plot of the real arrays X & Y in the
-      *      region of the display surface defined be the specified SGS zone.
-      *
-      *   Input arguments:
-      *
-      *      IZONE    INTEGER         SGS zone identifier
-      *      X        REAL(N)         X values of data points
-      *      Y        REAL(N)         Y   "    "    "    "
-      *      N        INTEGER         Number of data points
-      *      XLO      REAL            Lower X axis limit
-      *      XHI      REAL            Higher X  "    "
-      *      YLO      REAL            Lower Y  "     "
-      *      YHI      REAL            Higher Y  "    "
-      *
-      *   Output arguments:
-      *
-      *      ISTAT    INTEGER         SGS status
-      *
-      *   Side effects:
-      *
-      *      The specified SGS zone is selected.
-      *++
-            IMPLICIT NONE
-            INTEGER  IZONE, N, ISTAT, PGSTAT
-            REAL     X(N), Y(N), XLO, XHI, YLO, YHI
+\begin{terminalv}
+     SUBROUTINE XYPLOT (IZONE, X, Y, N, XLO, XHI, YLO, YHI, ISTAT)
+*++
+*
+*   XYPLOT   Draw X,Y plot in an SGS zone.
+*
+*   Description:
+*
+*      Uses PGPLOT to draw an X,Y plot of the real arrays X & Y in the
+*      region of the display surface defined be the specified SGS zone.
+*
+*   Input arguments:
+*
+*      IZONE    INTEGER         SGS zone identifier
+*      X        REAL(N)         X values of data points
+*      Y        REAL(N)         Y   "    "    "    "
+*      N        INTEGER         Number of data points
+*      XLO      REAL            Lower X axis limit
+*      XHI      REAL            Higher X  "    "
+*      YLO      REAL            Lower Y  "     "
+*      YHI      REAL            Higher Y  "    "
+*
+*   Output arguments:
+*
+*      ISTAT    INTEGER         SGS status
+*
+*   Side effects:
+*
+*      The specified SGS zone is selected.
+*++
+     IMPLICIT NONE
+     INTEGER  IZONE, N, ISTAT, PGSTAT
+     REAL     X(N), Y(N), XLO, XHI, YLO, YHI
 
-            CHARACTER*10 WKID
-            INTEGER IWKID
+     CHARACTER*10 WKID
+     INTEGER IWKID
 
-            INTEGER PGBEG
+     INTEGER PGBEG
 
 
-      *  Select the specified SGS zone.
-            CALL SGS_SELZ(IZONE, ISTAT)
-            IF (ISTAT.EQ.0) THEN
+*  Select the specified SGS zone.
+     CALL SGS_SELZ(IZONE, ISTAT)
+     IF (ISTAT.EQ.0) THEN
 
-      *     Inquire the GKS workstation identifier of the current zone.
-               CALL SGS_ICURW(IWKID)
+*     Inquire the GKS workstation identifier of the current zone.
+        CALL SGS_ICURW(IWKID)
 
-      *     Encode workstation id as a character string.
-               WRITE(UNIT=WKID, FMT='(I10)') IWKID
+*     Encode workstation id as a character string.
+        WRITE(UNIT=WKID, FMT='(I10)') IWKID
 
-      *     Open PGPLOT
-               PGSTAT = PGBEG(0, WKID, 1, 1)
-               IF (PGSTAT.EQ.1) THEN
+*     Open PGPLOT
+        PGSTAT = PGBEG(0, WKID, 1, 1)
+        IF (PGSTAT.EQ.1) THEN
 
-      *     Define axis limits.
-                  CALL PGENV(XLO, XHI, YLO, YHI, 0, 0)
+*     Define axis limits.
+           CALL PGENV(XLO, XHI, YLO, YHI, 0, 0)
 
-      *     Plot the data.
-                  CALL PGPT(N, X, Y, 2)
+*     Plot the data.
+           CALL PGPT(N, X, Y, 2)
 
-      *     Close down PGPLOT.
-                  CALL PGEND
-               END IF
-            END IF
-            END
-\end{verbatim}
+*     Close down PGPLOT.
+           CALL PGEND
+        END IF
+     END IF
+     END
+\end{terminalv}
 \end{small}
 
 Because other plotting packages may have plotted on the same physical device,
@@ -595,15 +351,12 @@ is common to the two versions of PGPLOT must be made in collaboration with Dr
 Pearson.
 
 The mixing of calls to PGPLOT and GKS routines is not supported except as
-described in \hyperref{this section}{section~}{}{viewport}, and neither
+described in \slhyperref{this section}{section~}{}{viewport}, and neither
 version supports the calling of GRPCKG routines directly. Existing programs
 that call GRPCKG should be re-written to call the equivalent PGPLOT routines.
 
-\begin{htmlonly}
-\appendix
-\section{Subroutine Descriptions}
-\include{pgplot.html}
-\end{htmlonly}
+
+
 
 % ? End of main text
 \end{document}
